--- a/view/design/stylesheet2.css
+++ b/view/design/stylesheet2.css
@@ -78,6 +78,23 @@ header img{
 
 }
 
+div p{
+  position: absolute;
+  top : 0px;
+  right: 0px;
+  height: 30px;
+  color : rgb(227,248,243);
+  border-color: gray;
+  border-radius: 8px;
+  background-color: rgb(30,115,190);
+  margin: 10px 20px 0px 0px;
+  padding: 5px;
+  width: 100px;
+  height: 55px;
+
+  font-size: 16px;
+  cursor: pointer;
+}
 
 
 button.espacePerso{
