--- a/view/design/contact.css
+++ b/view/design/contact.css
@@ -175,18 +175,13 @@ div.contenu{
 }
 
 
-.comment p{
+.message p{
   border: 1px solid #20bf6b;
   padding: 10px;
   margin-top: 10px;
 }
 
-.checked {
-  color: orange;
-}
-.rating span {
-  display: inline-block;
-}
+
 
 
 h6 {
@@ -196,62 +191,55 @@ h6 {
   font-family: inherit;
   display: inline-block;
 }
-.rate {
-    float: left;
-    height: 46px;
-    padding: 0 10px;
+
+@import "compass/css3";
+
+@import url(https://fonts.googleapis.com/css?family=Merriweather);
+
+
+main {
+  background: #f1f1f1;
+  font-family: 'Merriweather', sans-serif;
+  padding: 1em;
 }
-.rate:not(:checked) > input {
-    position:absolute;
-    top:-9999px;
+
+
+form {
+   max-width: 600px;
+   text-align: center;
+   margin: 20px auto;
+
+  input, textarea {
+     border:0; outline:0;
+     padding: 1em;
+     @include border-radius(8px);
+     display: block;
+     width: 100%;
+     margin-top: 1em;
+     font-family: 'Merriweather', sans-serif;
+     @include box-shadow(0 1px 1px rgba(black, 0.1));
+     resize: none;
+
+    &:focus {
+       @include box-shadow(0 0px 2px rgba($red, 1)!important);
+    }
+  }
+
+  .submit {
+     color: white;
+     background: $red;
+     cursor: pointer;
+
+    &:hover {
+       @include box-shadow(0 1px 1px 1px rgba(#aaa, 0.6));
+    }
+  }
+
+  textarea {
+      height: 126px;
+  }
 }
-.rate:not(:checked) > label {
-    float:right;
-    width:1em;
-    overflow:hidden;
-    white-space:nowrap;
-    cursor:pointer;
-    font-size:30px;
-    color:#ccc;
-}
-.rate:not(:checked) > label:before {
-    content: '★ ';
-}
-.rate > input:checked ~ label {
-    color: #ffc700;
-}
-.rate:not(:checked) > label:hover,
-.rate:not(:checked) > label:hover ~ label {
-    color: #deb217;
-}
-.rate > input:checked + label:hover,
-.rate > input:checked + label:hover ~ label,
-.rate > input:checked ~ label:hover,
-.rate > input:checked ~ label:hover ~ label,
-.rate > label:hover ~ input:checked ~ label {
-    color: #c59b08;
-}
-textarea{
-  margin-left: 50px;
-  color: #20bf6b !important;
-  background: #ffffff;
-  padding: 10px;
-  border: 1px solid #20bf6b !important;
-  border-radius: 1px;
-  display: inline-block;
-  transition: all 0.3s ease 0s;
-}
-.Submit{
-  margin-left: 50px;
-  color: #20bf6b !important;
-  text-transform: uppercase;
-  background: #ffffff;
-  padding: 10px;
-  border: 4px solid #20bf6b !important;
-  border-radius: 6px;
-  display: inline-block;
-  transition: all 0.3s ease 0s;
-}
+
 
 footer{
   position: relative;
