--- a/view/design/stylesheet.css
+++ b/view/design/stylesheet.css
@@ -114,7 +114,7 @@ button.espacePerso:hover{
   color: rgb(227,248,243);
   border-color: rgb(227,248,243);
 }
-button.login{
+.login{
   position: absolute;
   top : 0px;
   right: 0px;
@@ -130,11 +130,35 @@ button.login{
   font-size: 16px;
   cursor: pointer;
 }
-button.login:hover{
+.login:hover{
   background-color: black;
   color: rgb(227,248,243);
   border-color: rgb(227,248,243);
 }
+
+.insc{
+  position: absolute;
+  top : 0px;
+  right: 120px;
+  height: 30px;
+  color : rgb(227,248,243);
+  border-color: gray;
+  border-radius: 8px;
+  background-color: rgb(30,115,190);
+  margin: 10px 20px 0px 0px;
+  padding: 5px;
+  width: 100px;
+  height: 55px;
+  font-size: 16px;
+  cursor: pointer;
+  text-align: center;
+}
+.insc:hover{
+  background-color: black;
+  color: rgb(227,248,243);
+  border-color: rgb(227,248,243);
+}
+
 .sign{
   margin: 20px;
   display: flex;
