--- a/view/design/stylesheet.css
+++ b/view/design/stylesheet.css
@@ -1,4 +1,13 @@
 
+.valider-refuser {
+  text-align: center;
+  display: flex;
+  justify-content: space-around;
+  margin: 0px 200px 0px 200px;
+
+}
+
+
 form{
   margin:50px;
 }
@@ -6,6 +15,29 @@ form{
 
 form > fieldset{
   margin-bottom:  50px;
+}
+
+.liste-demandes{
+  margin: 20px;
+}
+
+.num{
+  position: absolute;
+  right: 50px;
+}
+
+.demande{
+  margin-bottom: 50px;
+  padding: 20px;
+  border: solid black 1.5px;
+  border-radius: 15px;
+}
+
+.demande-infoPerso{
+}
+
+.demande-id-mdp{
+  background-color: lightgray;
 }
 
 header{
@@ -178,11 +210,11 @@ div.centre{
   width: 60%
 }
 /* div.Column{
-  border: 2px solid #362514;
-  border-radius: 2px;
-  padding: 20px;
-  width: 20%;
-  padding: 0px;
+border: 2px solid #362514;
+border-radius: 2px;
+padding: 20px;
+width: 20%;
+padding: 0px;
 } */
 .comment p{
   border: 1px solid #20bf6b;
@@ -203,39 +235,39 @@ h6 {
   display: inline-block;
 }
 .rate {
-    float: left;
-    height: 46px;
-    padding: 0 10px;
+  float: left;
+  height: 46px;
+  padding: 0 10px;
 }
 .rate:not(:checked) > input {
-    position:absolute;
-    top:-9999px;
+  position:absolute;
+  top:-9999px;
 }
 .rate:not(:checked) > label {
-    float:right;
-    width:1em;
-    overflow:hidden;
-    white-space:nowrap;
-    cursor:pointer;
-    font-size:30px;
-    color:#ccc;
+  float:right;
+  width:1em;
+  overflow:hidden;
+  white-space:nowrap;
+  cursor:pointer;
+  font-size:30px;
+  color:#ccc;
 }
 .rate:not(:checked) > label:before {
-    content: '★ ';
+  content: '★ ';
 }
 .rate > input:checked ~ label {
-    color: #ffc700;
+  color: #ffc700;
 }
 .rate:not(:checked) > label:hover,
 .rate:not(:checked) > label:hover ~ label {
-    color: #deb217;
+  color: #deb217;
 }
 .rate > input:checked + label:hover,
 .rate > input:checked + label:hover ~ label,
 .rate > input:checked ~ label:hover,
 .rate > input:checked ~ label:hover ~ label,
 .rate > label:hover ~ input:checked ~ label {
-    color: #c59b08;
+  color: #c59b08;
 }
 textarea{
   margin-left: 50px;
@@ -263,36 +295,36 @@ footer{
   bottom: 0;
   width: 100%;
   background-color: black;
-	display: flex;
-	justify-content: center;
-	text-align: center;
-	font-size: 0.9em;
-	color: black;
-	padding: 5px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  font-size: 0.9em;
+  color: black;
+  padding: 5px;
   box-shadow: -0px -7px 5px grey;
   margin-top: 50px;
 }
 footer p{
   display: flex;
   justify-content: center;
-	margin: 0;
+  margin: 0;
   color: #e3f8f3;
   font-size: 75%;
 }
 footer ul{
-	display: flex;
+  display: flex;
   justify-content: center;
-	padding: 0px;
+  padding: 0px;
 }
 footer li{
-	list-style: none;
-	padding: 0 5px;
+  list-style: none;
+  padding: 0 5px;
   font-size: 100%;
   padding: 10px;
 }
 footer a{
   color: #e3f8f3;
-	text-decoration: none;
+  text-decoration: none;
 }
 footer a:hover {
   color: gray;
@@ -313,7 +345,7 @@ i.fa{
   height: 20px;
 }
 .fa:hover {
-    opacity: 0.7;
+  opacity: 0.7;
 }
 .fa-facebook {
   background: #3B5998;
@@ -355,27 +387,27 @@ i.fa{
   font-weight: bold;
 }
 .navbar nav {
-    font-family: monospace;
+  font-family: monospace;
 }
 .navbar > ul {
-    background: rgb(30,115,190);
-    list-style: none;
-    margin-bottom: 7px;
-    padding-left: 0;
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    box-shadow: 0px 7px 5px grey;
+  background: rgb(30,115,190);
+  list-style: none;
+  margin-bottom: 7px;
+  padding-left: 0;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  box-shadow: 0px 7px 5px grey;
 }
 .navbar li {
-    z-index: 5;
-    color: #fff;
-    background: rgb(30,115,190);
-    display: block;
-    float: left;
-    padding: 1rem;
-    position: relative;
-    text-decoration: none;
+  z-index: 5;
+  color: #fff;
+  background: rgb(30,115,190);
+  display: block;
+  float: left;
+  padding: 1rem;
+  position: relative;
+  text-decoration: none;
   transition-duration: 0.5s;
   padding: 10px 20px 10px 20px
 }
@@ -384,32 +416,32 @@ i.fa{
 }
 .navbar li:hover,
 .navbar li:focus-within {
-    background: black;
-    cursor: pointer;
+  background: black;
+  cursor: pointer;
 }
 .navbar li:focus-within a {
   outline: none;
 }
 .navbar ul li ul {
-    visibility: hidden;
+  visibility: hidden;
   opacity: 0;
   min-width: 5rem;
-    position: absolute;
+  position: absolute;
   transition: all 0.5s ease;
   margin-top: 1rem;
-    left: 0;
+  left: 0;
   display: none;
 }
 .navbar ul li:hover > ul,
 .navbar ul li:focus-within > ul,
 .navbar ul li ul:hover,
 .navbar ul li ul:focus {
-   visibility: visible;
-   opacity: 1;
-   display: block;
+  visibility: visible;
+  opacity: 1;
+  display: block;
 }
 .navbar ul li ul li {
-    clear: both;
+  clear: both;
   width: 100%;
 }
 ul.dropdown{
@@ -423,8 +455,8 @@ ul.dropdown{
   margin: 64px 0px 64px 0px;
 }
 h1{
-text-align: center;
-margin: 0px;
+  text-align: center;
+  margin: 0px;
 }
 h3{
   text-align: center;
